# crunchmania-rs

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: bitreader.rs  constants.rs  error.rs  header.rs  lib.rs  pack.rs  unpack.rs
tests/: vectors.rs
tests/data/: 031  README.md
